--- a/style.css
+++ b/style.css
@@ -1,102 +1,175 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "poppins", sans-serif;
-
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "poppins", sans-serif;
 }
-.header{
-    width: 100%;
-    height: 100vh;
-    background-image: url(background.png);
-    background-position: center;
-    background-size: cover;
-    color: #fff;;
-    padding: 0 7%;
-    position:  relative;
 
+.header {
+  width: 100%;
+  height: 100vh;
+  background-image: url(background.png);
+  background-position: center;
+  background-size: cover;
+  color: #fff;
+  padding: 0 7%;
+  position: relative;
 }
-nav{
 
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 0 10px;
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0 10px;
 }
+
 nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin : 10px 30px ;
+  display: inline-block;
+  list-style: none;
+  margin: 10px 30px;
 }
-.logo{
-    width: 160px;
-    cursor: pointer;
 
+.logo {
+  width: 160px;
+  cursor: pointer;
 }
+
 nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 17px;
-    letter-spacing:  1px;
-    cursor: pointer;
-    
+  text-decoration: none;
+  color: #fff;
+  font-size: 17px;
+  letter-spacing: 1px;
+  cursor: pointer;
 }
-nav ul li a:hover{ 
-    color: cadetblue;
 
-} 
-.text-box{
-    margin-top: 16%;
-    font-size: 22px;
+nav ul li a:hover {
+  color: cadetblue;
 }
-.text-box h1{
-    font-size: 85px;
-    font-weight: 600;
-    line-height: 100px;
-    margin-bottom: 10px;
-}
-.text-box .btn{
-    outline: none;
-    border: none;
-    font-size: 16px;
-    margin-top: 30px;
-    background: rgb(14, 173, 212);
-    color: #fff;
-    padding: 14px 48px;
-    cursor: pointer  ;
 
+.text-box {
+  margin-top: 16%;
+  font-size: 22px;
 }
-.download{
-    position: absolute;
-    right: 7%;
-    bottom: 60px;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #fff;
-    padding: 20px 40px;
-    border-radius: 40px;
-    transition: background 0.3s;
-}
-.download img{
-    width:25px;
-    margin-left: 15px;
-    animation: move 3s backwards infinite;
 
+.text-box h1 {
+  font-size: 85px;
+  font-weight: 600;
+  line-height: 100px;
+  margin-bottom: 10px;
 }
-@keyframes move{
-    0%{
-        transform:translate(-10px);
-    }
-    50%{
-        transform:translate(10px);
-    }
-    100%{
-        transform:translate(-100px);
-    }
+
+.text-box .btn {
+  outline: none;
+  border: none;
+  font-size: 16px;
+  margin-top: 30px;
+  background: rgb(14, 173, 212);
+  color: #fff;
+  padding: 14px 48px;
+  cursor: pointer;
 }
-.download:hover{
-    background :rgb(36, 138, 133);
+
+.download {
+  position: absolute;
+  right: 7%;
+  bottom: 60px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+  padding: 20px 40px;
+  border-radius: 40px;
+  transition: background 0.3s;
+}
+
+.download img {
+  width: 25px;
+  margin-left: 15px;
+  animation: move 3s backwards infinite;
+}
+
+@keyframes move {
+  0% {
+    transform: translate(-10px);
+  }
+  50% {
+    transform: translate(10px);
+  }
+  100% {
+    transform: translate(-100px);
+  }
+}
+
+.download:hover {
+  background: rgb(36, 138, 133);
+}
+
+/* Media Queries for Responsive Design */
+
+/* Small devices (mobile phones) */
+@media only screen and (max-width: 600px) {
+  .header {
+    padding: 0 5%;
+  }
+
+  .logo {
+    width: 120px;
+  }
+
+  .text-box {
+    margin-top: 10%;
+    font-size: 18px;
+  }
+
+  .text-box h1 {
+    font-size: 60px;
+    line-height: 80px;
+  }
+
+  .text-box .btn {
+    font-size: 14px;
+  }
+
+  .download {
+    right: 5%;
+    bottom: 40px;
+    padding: 15px 30px;
+  }
+}
+
+/* Medium devices (tablets) */
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  .header {
+    padding: 0 10%;
+  }
+
+  .logo {
+    width: 140px;
+  }
+
+  .text-box {
+    margin-top: 12%;
+    font-size: 20px;
+  }
+
+  .text-box h1 {
+    font-size: 70px;
+    line-height: 90px;
+  }
+
+  .text-box .btn {
+    font-size: 15px;
+  }
+
+  .download {
+    right: 10%;
+    bottom: 50px;
+    padding: 18px 36px;
+  }
+}
+
+/* Large devices (desktops) */
+@media only screen and (min-width: 1025px) {
+  /* No specific changes needed for large devices */
 }
